# cyberfabric-core

./: CHANGELOG.md  Cargo.toml  Makefile  deny.toml  rust-toolchain.toml
.cypilot/config/: core.toml
apps/gts-docs-validator/: README.md
apps/gts-docs-validator/src/: main.rs
apps/hyperspot-server/src/: main.rs  registered_modules.rs
config/: e2e-local.yaml  mini-chat.yaml  quickstart.yaml
libs/modkit/: Cargo.toml
libs/modkit-transport-grpc/src/: client.rs  rpc_retry.rs
modules/chat-engine/docs/: DECOMPOSITION.md
modules/chat_engine/: DESIGN.md  PRD.md
modules/chat_engine/ADR/: 0001-message-tree-structure.md  0002-capability-model.md  0003-streaming-architecture.md  0004-routing-layer.md  0005-file-handling.md  0006-webhook-protocol.md  0007-websocket-client-protocol.md  0008-webhook-event-types.md  0009-streaming-cancellation.md  0010-stateless-scaling.md  0011-circuit-breaker.md  0012-backpressure-handling.md  0013-timeout-configuration.md  0014-message-variants.md  0015-variant-indexing.md  (+7 more)
modules/system/oagw/oagw-client-prototype/: Cargo.toml  README.md  VERIFICATION.md
modules/system/oagw/oagw-client-prototype/examples/: async_usage.rs  blocking_usage.rs  streaming_sse.rs
modules/system/oagw/oagw-client-prototype/src/: body.rs  client.rs  error.rs  lib.rs  remote_proxy.rs  request.rs  response.rs  sse.rs
modules/system/oagw/oagw-client-prototype/tests/: compatibility_test.rs  integration_test.rs  python_integration_test.rs
modules/system/oagw/oagw-client-prototype/tests/python_integration/: OVERVIEW.md  README.md  server.py
(+96 files in other folders)
