[package]
name = "oagw-client-prototype"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
# Core HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
http = "0.2"  # Match reqwest's http version
bytes = "1.11"

# Async runtime
tokio = { version = "1.47", features = ["full", "rt-multi-thread"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"

[dev-dependencies]
# Testing utilities
httpmock = "0.8"
tokio-test = "0.4"
temp-env = "0.3"

[[example]]
name = "async_usage"
path = "examples/async_usage.rs"

[[example]]
name = "blocking_usage"
path = "examples/blocking_usage.rs"

[[example]]
name = "streaming_sse"
path = "examples/streaming_sse.rs"
